# OSM_snippets

./: .gitignore  .gitmodules  LICENSE  README.md
AccraMobile3/: collect_all_tracks.py
OSM-tag-traquer/: README.md  taginfo-traquer.py
OSM-to-wiki/: Pipfile  csv2wiki.ipynb  osm2wiki.ipynb
STIF-to-OSM/: README.md  index.html  line.html  route_choose.html  stop.html  stops_by_line.html  stops_by_route.html
analyse_ref_STIF/: DEPRECATED_analyse_osm_relations_stif.py  analyse_osm_relations_stif.py  analyse_stops_stif.py  extract_stops_of_a_route.py  osmose_issues_template.xml  osmose_stops.xml  osmose_test.xml  readme.md
bus_stats/: bus_stats.factfile
conflate/: README.md
conflate_sirene/: préparation des données.ipynb
extract_pt_lines/: extract_lines.sh
gtfs/: create_minimal_gtfs_from_osm_relations.py
gtfs_to_josm/: Pipfile  load_gtfs_in_josm.ipynb  readme.md
jsongraph/: overpass2jsongraph.ipynb
kml-todo/: busfixme.kml  bussansligne.kml  bussansnom.kml  kml_generator.py
navitia-to-OSM/: README.md  navitia2OSM.py
navitia-to-OSM (bus routes)/: README.md  analyse_osm_relations_stif.py  collect_osm_relations.py  collecte_autre.md  osmose_issues_template.xml  rapprochement_osm_navitia.py  route_to_html.py
od_volumes/: get_od_volumes.py  readme.md
parsewiki/: README.md  get_route_list_from_wiki.ipynb  routes_list.csv
ptna_idf/: Pipfile  bus_by_networks.csv  readme.md  (+1 more)
remove_too_close_photos/: README.md  pyproject.toml  remove_close_photos.py
remove_too_close_photos/lib/: exif_read.py
send_to_josm/: README.md  pyproject.toml  send_to_josm.py
(+72 files in other folders)
