[tool.poetry]
name = "send-to-josm"
version = "0.1.0"
description = "A script to load OSM objets in JOSM"
authors = ["Noémie Lehuby <noemie.lehuby@zaclys.net>"]
license = "GPL-3.0 License"
readme = "README.md"
packages = [{include = "send_to_josm"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
